Get Fabric JEI running